letter spacing fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -329,7 +329,7 @@ tbody tr:last-of-type {
 
 p {
     line-height: 1;
-    letter-spacing: -.1ch;
+    letter-spacing: -.05ch;
 }
 
 .container {
